--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ You can generate a new signature at www.cdpn.io/JYpjvE
       </svg> Download Contract
     </button> <small>contract-4015ce.php (you can rename this)</small>
     
-    <input type="hidden" id="signature_capture" name="contractdata">
-    <input type="hidden" id="html_capture" name="contractdata">
+    <input type="hidden" id="signature_capture" name="signature_capture">
+    <input type="hidden" id="html_capture" name="html_capture">
     
   </form>
   
