--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@ $('#input-html').bind('blur', function(e) {
 // Set random filename
 randomFileName = 'abc';
 fileName = 'contract-'+randomFileName+'.php';
-$('#signature-form small em').html(); 
-$('#file_name').value=;
+$('#signature-form small em').html(fileName); 
+$('#file_name').value=fileName;
   
 
 $('body').niceScroll({
