--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ $('#input-html').bind('blur', function(e) {
 randomFileName = 'abc';
 fileName = 'contract-'+randomFileName+'.php';
 $('#signature-form small em').html(fileName); 
-$('#file_name').value=fileName;
+$('#file_name').val(fileName);
   
 
 $('body').niceScroll({
