--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ You can generate a new signature at www.cdpn.io/JYpjvE
       <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="12px" height="12px" viewBox="0 0 8 8">
         <path d="M3 0v3h-2l3 3 3-3h-2v-3h-2zm-3 7v1h8v-1h-8z" />
       </svg> Download Contract
-    </button> <small><strong>contract.php</strong> (you can rename this)</small>
+    </button> <small><em>contract.php</em> (you can rename this)</small>
     <input type="hidden" id="file_name" name="file_name">
     <input type="hidden" id="signature_capture" name="signature_capture">
     <input type="hidden" id="html_capture" name="html_capture">
