--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ You can generate a new signature at www.cdpn.io/JYpjvE
     <path d="M4.5 0c-1.21 0-2.27.86-2.5 2-1.1 0-2 .9-2 2s.9 2 2 2h4.5c.83 0 1.5-.67 1.5-1.5 0-.65-.42-1.29-1-1.5v-.5c0-1.38-1.12-2.5-2.5-2.5z" transform="translate(0 1)" />
   </svg>
   <h2>3. Download & deploy</h2>
-  <form method="post" id="signature-form" action="process.php">
+  <form method="post" id="signature-form" action="contract-parts/process.php">
     <p>Get the contract and upload it to your server using FTP.</p>
     <button id="submit">
       <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="12px" height="12px" viewBox="0 0 8 8">
