--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <svg xmlns="http://www.w3.org/2000/svg" class="large-icon" viewBox="0 0 8 8">
     <path d="M5 0l-3 6h1l3-6h-1zm-4 1l-1 2 1 2h1l-1-2 1-2h-1zm5 0l1 2-1 2h1l1-2-1-2h-1z" transform="translate(0 1)" />
   </svg>
-  <h2>1. Contract HTML</h2>
+  <h2>I. Contract HTML</h2>
   <p>The contract copy should be in HTML format. 
     Write it below, or paste its <span style="font-family:'Open Sans Condensed'; letter-spacing:.25px;font-size:1.2em; ">&lt;&gt; source code</span> from somewhere else, and replace 
     the default text in the editor.
@@ -110,7 +110,7 @@ You can generate a new signature at www.cdpn.io/JYpjvE
   <svg xmlns="http://www.w3.org/2000/svg" class="large-icon right" viewBox="0 0 8 8">
     <path d="M6 0l-1 1 2 2 1-1-2-2zm-2 2l-4 4v2h2l4-4-2-2z" />
   </svg>
-  <h2>2. Your signature</h2>
+  <h2>III. Your signature</h2>
   <p>This goes on the bottom of the contract. Use your mouse cursor or the tip of your finger to sign in the dotted box below.
   <br>[<a href="#" id="reset">Reset sigature box?</a>]</p>
   
@@ -135,7 +135,7 @@ You can generate a new signature at www.cdpn.io/JYpjvE
   <svg xmlns="http://www.w3.org/2000/svg" class="large-icon" viewBox="0 0 8 8">
     <path d="M0 0v1l4 2 4-2v-1h-8zm0 2v4h8v-4l-4 2-4-2z" transform="translate(0 1)" />
   </svg>
-  <h2>4. Ask your client to review and sign.</h2>
+  <h2>IV. Ask your client to review and sign.</h2>
   <p>Send your client a link to the contract (hosted under your domain).
   </p>
   <!--<p>The link could be short and random or long and descriptive, but not very obvious to guess: you probably don't want some clients to be able to find other clients' contracts.</p>-->
