--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ You can generate a new signature at www.cdpn.io/JYpjvE
   <svg xmlns="http://www.w3.org/2000/svg" class="large-icon right" viewBox="0 0 8 8">
     <path d="M6 0l-1 1 2 2 1-1-2-2zm-2 2l-4 4v2h2l4-4-2-2z" />
   </svg>
-  <h2>III. Your signature</h2>
+  <h2>II. Your signature</h2>
   <p>This goes on the bottom of the contract. Use your mouse cursor or the tip of your finger to sign in the dotted box below.
   <br>[<a href="#" id="reset">Reset sigature box?</a>]</p>
   
@@ -119,7 +119,9 @@ You can generate a new signature at www.cdpn.io/JYpjvE
   <svg xmlns="http://www.w3.org/2000/svg" class="large-icon" viewBox="0 0 8 8">
     <path d="M4.5 0c-1.21 0-2.27.86-2.5 2-1.1 0-2 .9-2 2s.9 2 2 2h4.5c.83 0 1.5-.67 1.5-1.5 0-.65-.42-1.29-1-1.5v-.5c0-1.38-1.12-2.5-2.5-2.5z" transform="translate(0 1)" />
   </svg>
-  <h2>3. Download & deploy</h2>
+
+
+  <h2>III. Download & deploy</h2>
   <form method="post" id="signature-form" action="contract-parts/process.php">
     <p>Get the contract and upload it to your server using FTP.</p>
     <button id="submit">
