--- a/generator/index.html
+++ b/generator/index.html
@@ -15,7 +15,7 @@
 <ul class="top-menu">
 <li class="currentt">
   <a title="WP Support & Development" href="http://vileworks.com" 
-     style="letter-spacing:.2em; font-size:1.1em">
+     style="letter-spacing:.2em; font-size:1.1em;">
     <span style="color:#bf7883; text-shadow:none;">
       Vile</span><span style="font-weight:300;">Works
     </span>
@@ -31,7 +31,7 @@
 
 <div id="content">
   
-  <h1>Signable contract.php</h1>
+  <h1 style="text-transform:none;">Signable contract.php</h1>
   <hr>
   <h2 style="text-align:center;">You FTP it to your server and send your client  <a title="demo.php" href="demo.php" target="_blank">a link to it&#8230;</a></h2>
   <h2 style="text-align:center; font-family:'Open Sans Condensed', sans; font-weight:300; line-height:1.5em; letter-spacing:.05em">
