--- a/generator/index.html
+++ b/generator/index.html
@@ -31,7 +31,7 @@
 
 <div id="content">
   
-  <h1 style="text-transform:none;">Signable contract.php</h1>
+  <h1 style="text-transform:none; letter-spacing: 0.075em; font-size:2.5em;">Signable contract.php</h1>
   <hr>
   <h2 style="text-align:center;">You FTP it to your server and send your client  <a title="demo.php" href="demo.php" target="_blank">a link to it&#8230;</a></h2>
   <h2 style="text-align:center; font-family:'Open Sans Condensed', sans; font-weight:300; line-height:1.5em; letter-spacing:.05em">
