--- a/generator/index.html
+++ b/generator/index.html
@@ -234,12 +234,30 @@ function makeId() {
 
 
 $('#print-preview').click(function(e){
-  $("<iframe>")
-    .hide()
-    .attr("src", "../demo.html")
-    .appendTo("body");
-  e.preventDefault();
+  printPage('../demo.php');
 });
+function closePrint () {
+  document.body.removeChild(this.__container__);
+}
+
+function setPrint () {
+  this.contentWindow.__container__ = this;
+  this.contentWindow.onbeforeunload = closePrint;
+  this.contentWindow.onafterprint = closePrint;
+  this.contentWindow.focus(); // Required for IE
+  this.contentWindow.print();
+}
+
+function printPage (sURL) {
+  var oHiddFrame = document.createElement("iframe");
+  oHiddFrame.onload = setPrint;
+  oHiddFrame.style.visibility = "hidden";
+  oHiddFrame.style.position = "fixed";
+  oHiddFrame.style.right = "0";
+  oHiddFrame.style.bottom = "0";
+  oHiddFrame.src = sURL;
+  document.body.appendChild(oHiddFrame);
+}
 
 $('body').niceScroll({
   cursoropacitymin: 0.5,
