--- a/generator/index.html
+++ b/generator/index.html
@@ -37,7 +37,7 @@
   <h2 style="text-align:center; font-family:'Open Sans Condensed', sans; font-weight:300; line-height:1.5em; letter-spacing:.05em">
     Once <strong>signed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
       <path d="M6 0l-1 1 2 2 1-1-2-2zm-2 2l-4 4v2h2l4-4-2-2z" />
-    </svg> by your client, this php file will delete itself from your server and leave behind an <a title="demo.html" href="demo.html" target="_blank">HTML version</a> of the contract 
+    </svg> by your client, this php file will delete itself from your server and leave behind an HTML version of the contract 
      that can be 
     <a id="print-preview" title="Print demo" href="../demo.php" target="_blank">
     <strong>printed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
@@ -235,11 +235,11 @@ function makeId() {
 
 $('#print-preview').click(function(e){
   printPage('../demo.php');
+  e.preventDefault();
 });
 function closePrint () {
   document.body.removeChild(this.__container__);
 }
-
 function setPrint () {
   this.contentWindow.__container__ = this;
   this.contentWindow.onbeforeunload = closePrint;
@@ -247,7 +247,6 @@ function setPrint () {
   this.contentWindow.focus(); // Required for IE
   this.contentWindow.print();
 }
-
 function printPage (sURL) {
   var oHiddFrame = document.createElement("iframe");
   oHiddFrame.onload = setPrint;
