--- a/generator/index.html
+++ b/generator/index.html
@@ -35,18 +35,23 @@
   <hr>
   <h2 style="text-align:center;">You FTP it to your server and send your client  a link to it&#8230;</h2>
   <h2 style="text-align:center; font-family:'Open Sans Condensed', sans; font-weight:300; line-height:1.5em; letter-spacing:.05em">
-    Once <strong>signed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
+    Once 
+    <a id="print-preview" title="Signable demo" href="../demo.html#hk" target="_blank">
+      <strong>signed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
       <path d="M6 0l-1 1 2 2 1-1-2-2zm-2 2l-4 4v2h2l4-4-2-2z" />
     </svg> by your client, this php file will delete itself from your server and leave behind an HTML version of the contract 
      that can be 
-    <a id="print-preview" title="Print demo" href="../demo.php" target="_blank">
-    <strong>printed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
+    <a id="print-preview" title="Print demo" href="../demo.html" target="_blank">
+      <strong>printed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
       <path d="M2 0v2h4v-2h-4zm-1.91 3c-.06 0-.09.04-.09.09v2.81c0 .05.04.09.09.09h.91v-2h6v2h.91c.05 0 .09-.04.09-.09v-2.81c0-.06-.04-.09-.09-.09h-7.81zm1.91 2v3h4v-3h-4z" />
     </svg> 
     </a>
-    or downloaded as a <strong>PDF</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
+    or downloaded as a 
+    <a id="print-preview" title="PDF demo" href="../demo.pdf" target="_blank">
+      <strong>PDF</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
       <path d="M0 0v8h7v-4h-4v-4h-3zm4 0v3h3l-3-3zm-3 2h1v1h-1v-1zm0 2h1v1h-1v-1zm0 2h4v1h-4v-1z" />
-    </svg>
+      </svg>
+    </a>
   </h2>
   <hr>
   
