--- a/generator/index.html
+++ b/generator/index.html
@@ -39,12 +39,13 @@
     <a id="print-preview" title="Signable demo" href="../demo.html#hk" target="_blank">
       <strong>signed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
       <path d="M6 0l-1 1 2 2 1-1-2-2zm-2 2l-4 4v2h2l4-4-2-2z" />
-    </svg> by your client, this php file will delete itself from your server and leave behind an HTML version of the contract 
-     that can be 
+      </svg> 
+    </a>
+    by your client, this php file will delete itself from your server and leave behind an HTML version of the contract that can be 
     <a id="print-preview" title="Print demo" href="../demo.html" target="_blank">
       <strong>printed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
       <path d="M2 0v2h4v-2h-4zm-1.91 3c-.06 0-.09.04-.09.09v2.81c0 .05.04.09.09.09h.91v-2h6v2h.91c.05 0 .09-.04.09-.09v-2.81c0-.06-.04-.09-.09-.09h-7.81zm1.91 2v3h4v-3h-4z" />
-    </svg> 
+      </svg> 
     </a>
     or downloaded as a 
     <a id="print-preview" title="PDF demo" href="../demo.pdf" target="_blank">
