--- a/generator/index.html
+++ b/generator/index.html
@@ -36,7 +36,7 @@
   <h2 style="text-align:center;">You FTP it to your server and send your client  a link to it&#8230;</h2>
   <h2 style="text-align:center; font-family:'Open Sans Condensed', sans; font-weight:300; line-height:1.5em; letter-spacing:.05em">
     Once 
-    <a title="Signable demo" href="../demo.php#hk" target="_blank">
+    <a title="Signable demo" href="../demo.php" target="_blank">
       <strong>signed</strong><svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 8 8">
       <path d="M6 0l-1 1 2 2 1-1-2-2zm-2 2l-4 4v2h2l4-4-2-2z" />
       </svg> 
