--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=http://www.redirect-location.com">
+    <meta http-equiv="refresh" content="0;url=generator/">
   </head>
 </html>
 
