--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <ul>
 <li>Host it on your own domain</li>
 <li>Can only be singed once</li>
-<li>Comes with "Print" and "Download as PDF" buttons
-<a href="http://vileworks.com/contract/demo.php"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Print/PDF Contract"></a>
-</li>
+<li>Comes with "Print" and "Download as PDF" buttons</li>
 </ul>
+
+<a href="http://vileworks.com/contract/demo.php"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Print/PDF Contract"></a>
 
 <p><strong><a href="http://vileworks.com/contract/demo.php">View demo, test signature functionality</a></strong>.</p>
 
