--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
   <div class="wrapper">
 <header>
-  <h1>Signable contract.php</h1>
+  <h1>About</h1>
   <p>A signable contract that lives in a single .php file</p>
 
   <p class="view"><a href="https://github.com/nonsalant/contract">View the Project on GitHub <small>nonsalant/contract</small></a></p>
@@ -44,7 +44,7 @@
 <li>Comes with "Print" and "Download as PDF" buttons</li>
 </ul>
 
-<a href="http://vileworks.com/contract/demo.php"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Print/PDF Contract"></a>
+<p><a href="http://vileworks.com/contract/demo.php"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Print/PDF Contract"></a></p>
 
 <p><strong><a href="http://vileworks.com/contract/demo.php">View demo, test signature functionality</a></strong>.</p>
 
