--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <![endif]-->
   </head>
   <body>
-  <div class="wrapper">
+  <div id="container" class="wrapper">
 <header>
   <h1>About</h1>
   <p>A signable contract that lives in a single .php file</p>
