--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ that can be printed or downloaded as a PDF.</p>
   <p class="view"><a href="https://github.com/nonsalant/contract">View the Project on GitHub <small>nonsalant/contract</small></a></p>
   <hr>
   <p>This project is maintained by <a href="https://github.com/nonsalant">nonsalant</a></p>
-  <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+  <p><small>Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></small></p>
   <!-- Place this tag where you want the su badge to render -->
   <su:badge layout="3"></su:badge>
   <!-- Place this snippet wherever appropriate -->
