--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   	<!-- Render StumbleUpon -->
+  	<su:badge layout="3"></su:badge>
   </div>
 </header>
 
@@ -53,17 +54,14 @@ and leave behind an HTML version of the signed contract
 that can be printed or downloaded as a PDF.</p>
 
 <p><a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p>
-      </section>
+
+</section>
 <footer>
   <h1>About</h1>
   <p>A signable contract that lives in a single .php file</p>
   <p class="view"><a href="https://github.com/nonsalant/contract">View the Project on GitHub <small>nonsalant/contract</small></a></p>
   <hr>
-  <p>This project is maintained by <a href="https://github.com/nonsalant">nonsalant</a></p>
   <p><small>Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></small></p>
-  <!-- Place this tag where you want the su badge to render -->
-  <su:badge layout="3"></su:badge>
-  
 </footer>
 
 </div>
@@ -81,8 +79,7 @@ that can be printed or downloaded as a PDF.</p>
       } catch(err) {}
     </script>
     
-    <!--StumbleUpon -->
-    <!-- Place this snippet wherever appropriate -->
+    <!--StumbleUpon Script -->
     <script type="text/javascript">
       (function() {
         var li = document.createElement('script'); li.type = 'text/javascript'; li.async = true;
