--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
   <div id="content" class="wrapper">
 <header>
-  <!--<ul>-->
-  <!--  <li><a href="https://github.com/nonsalant/contract/zipball/master">Download <strong>ZIP File</strong></a></li>-->
-  <!--  <li><a href="https://github.com/nonsalant/contract/tarball/master">Download <strong>TAR Ball</strong></a></li>-->
-  <!--  <li><a href="https://github.com/nonsalant/contract">View On <strong>GitHub</strong></a></li>-->
-  <!--</ul>-->
+  <ul>
+    <li><a href="https://github.com/nonsalant/contract/zipball/master">Download <strong>ZIP File</strong></a></li>
+    <li><a href="https://github.com/nonsalant/contract/tarball/master">Download <strong>TAR Ball</strong></a></li>
+    <li><a href="https://github.com/nonsalant/contract">View On <strong>GitHub</strong></a></li>
+  </ul>
   <div class="github-buttons">
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
@@ -59,9 +59,9 @@ that can be printed or downloaded as a PDF.</p>
 <footer>
   <h1>About</h1>
   <p>A signable contract that lives in a single .php file</p>
-  <p class="view"><a href="https://github.com/nonsalant/contract">View the Project on GitHub <small>nonsalant/contract</small></a></p>
+  <p class="view"><a href="https://github.com/nonsalant/contract">View the Project on GitHub</a></p>
   <hr>
-  <p><small>Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></small></p>
+  <p style="align:center;">Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></p>
 </footer>
 
 </div>
