--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
-  <div id="content" class="wrapper">
+<body>
+
+<ul class="top-menu">
+<li class="currentt">
+  <a title="WP Support &amp; Development" href="http://vileworks.com" style="letter-spacing:.2em; font-size:1.1em;">
+    <span style="color:#bf7883; text-shadow:none;">
+      Vile</span><span style="font-weight:300;">Works
+    </span>
+  </a>
+</li>
+<li id="menu-item-1"><a title="WordPress Develoment Services" href="/services/">Services</a></li>
+<li id="menu-item-2"><a title="WordPress Design Portfolio" href="/portfolio/">Portfolio</a></li>
+<li id="menu-item-3"><a title="Resources &amp; Blog" href="/resources/">Resources</a></li>
+<li id="menu-item-4"><a title="Contact Us" href="/contact/">Contact</a></li>
+</ul>
+
+<div id="content" class="wrapper">
 <header>
   <ul>
     <li><a href="https://github.com/nonsalant/contract/zipball/master">Download <strong>ZIP File</strong></a></li>
