--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
     </span>
   </a>
 </li>
-<li id="menu-item-1"><a title="WordPress Develoment Services" href="/services/">Services</a></li>
-<li id="menu-item-2"><a title="WordPress Design Portfolio" href="/portfolio/">Portfolio</a></li>
-<li id="menu-item-3"><a title="Resources &amp; Blog" href="/resources/">Resources</a></li>
-<li id="menu-item-4"><a title="Contact Us" href="/contact/">Contact</a></li>
+<li id="menu-item-1"><a title="WordPress Develoment Services" href="http://vileworks.com/services/">Services</a></li>
+<li id="menu-item-2"><a title="WordPress Design Portfolio" href="http://vileworks.com/portfolio/">Portfolio</a></li>
+<li id="menu-item-3"><a title="Resources &amp; Blog" href="http://vileworks.com/resources/">Resources</a></li>
+<li id="menu-item-4"><a title="Contact Us" href="http://vileworks.com/contact/">Contact</a></li>
 </ul>
 
 <div id="content" class="wrapper">
 <header>
-  
-  <h1><a id="contract" class="anchor" href="#contract" aria-hidden="true">
-  <span class="octicon octicon-link"></span></a>contract</h1>
-
+  <hr>
+  <h1><a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>contract</h1>
+  <hr>
   <ul>
     <li><a href="https://github.com/nonsalant/contract/zipball/master">Download <strong>ZIP File</strong></a></li>
     <li><a href="https://github.com/nonsalant/contract/tarball/master">Download <strong>TAR Ball</strong></a></li>
