--- a/index.html
+++ b/index.html
@@ -34,12 +34,6 @@
     <a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>
     Signable Contract.php
   </h1>
-  <div class="promote">
-  	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
-  	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
-  	<!-- Render StumbleUpon -->
-  	<su:badge layout="3"></su:badge>
-  </div>
   <h2>A signable contract that lives in a single .php file</h2>
 </header>
 
@@ -57,7 +51,7 @@
 
 <hr>
 
-<p><strong><a href="http://vileworks.com/contract/generator/">Generate a new contract online</a></strong> or get the concatenated code from <a href="https://github.com/nonsalant/contract/blob/master/contract.php">contract.php</a> in this repo.</p>
+<p><strong><a href="http://vileworks.com/contract/generator/">Generate a new contract online</a></strong> or get the concatenated code from <a href="https://github.com/nonsalant/contract/blob/master/contract.php">contract.php</a> in the GitHub repo.</p>
 
 <p>Upload the <strong>contract.php</strong> file to your server and send a link to your client. 
 (You can rename this file, for example if there are other contracts in the same folder.)</p>
@@ -70,6 +64,13 @@ that can be printed or downloaded as a PDF.</p>
 
 </section>
 <footer>
+  <div class="promote">
+  	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
+  	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
+  	<!-- Render StumbleUpon -->
+  	<su:badge layout="3"></su:badge>
+  </div>
+  <hr>
   <a href="https://github.com/nonsalant/contract/zipball/master">Download <strong>ZIP File</strong></a> | 
   <a href="https://github.com/nonsalant/contract/tarball/master">Download <strong>TAR Ball</strong></a> |
   <a href="https://github.com/nonsalant/contract">View On <strong>GitHub</strong></a>
