--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <li id="menu-item-4"><a title="Contact Us" href="http://vileworks.com/contact/">Contact</a></li>
 </ul>
 
-<div id="content" class="wrapper">
+<article id="content" class="wrapper">
+  
 <header>
   <h1>
     <a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>
@@ -38,32 +39,25 @@
 </header>
 
 <section>
-
 <ul>
 <li>Host it on your own domain</li>
 <li>Can only be singed once</li>
 <li>Comes with "Print" and "Download as PDF" buttons</li>
 </ul>
-
 <p><a href="http://vileworks.com/contract/demo.php"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Print/PDF Contract"></a></p>
-
 <p><strong><a href="http://vileworks.com/contract/demo.php">View demo, test signature functionality</a></strong>.</p>
-
 <hr>
-
 <p><strong><a href="http://vileworks.com/contract/generator/">Generate a new contract online</a></strong> or get the concatenated code from <a href="https://github.com/nonsalant/contract/blob/master/contract.php">contract.php</a> in the GitHub repo.</p>
-
 <p>Upload the <strong>contract.php</strong> file to your server and send a link to your client. 
 (You can rename this file, for example if there are other contracts in the same folder.)</p>
-
 <p>Once they have signed, this PHP file will delete itself 
 and leave behind an HTML version of the signed contract 
 that can be printed or downloaded as a PDF.</p>
-
 <p><a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p>
-
 </section>
+
 <footer>
+  <hr>
   <div class="promote">
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
@@ -75,12 +69,12 @@ that can be printed or downloaded as a PDF.</p>
   <a href="https://github.com/nonsalant/contract/tarball/master">Download <strong>TAR Ball</strong></a> |
   <a href="https://github.com/nonsalant/contract">View On <strong>GitHub</strong></a>
   <hr>
-  <p style="align:center;">Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></p>
+  <p">Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></p>
 </footer>
-</div>
+
+</article>
 
 <script src="javascripts/scale.fix.js"></script>
-
 <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -91,7 +85,6 @@ that can be printed or downloaded as a PDF.</p>
   pageTracker._trackPageview();
   } catch(err) {}
 </script>
-
 <!--StumbleUpon Script -->
 <script type="text/javascript">
   (function() {
