--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>
     Signable Contract.php
   </h1>
-  <h2>A signable contract that lives in a single .php file</h2>
+  <h2>An electronically signable contract that lives in a single .php file</h2>
 </header>
 
 <section>
@@ -58,6 +58,7 @@ that can be printed or downloaded as a PDF.</p>
 
 <footer>
   <hr>
+  <h2>A signable contract that lives in a single .php file</h2>
   <div class="promote">
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
