--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>
     Signable Contract.php
   </h1>
-  <h2>An electronically signable contract that lives in a single .php file</h2>
+  <h2>Generate an esignable contract that lives in a single .php file</h2>
 </header>
 
 <section>
