--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@ that can be printed or downloaded as a PDF.</p>
   	<su:badge layout="3"></su:badge>
   </div>
   <hr>
-  <a href="https://github.com/nonsalant/contract/zipball/master">Download <strong>ZIP File</strong></a> | 
-  <a href="https://github.com/nonsalant/contract/tarball/master">Download <strong>TAR Ball</strong></a> |
-  <a href="https://github.com/nonsalant/contract">View On <strong>GitHub</strong></a>
-  <hr>
-  <p">Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></p>
+  <p>Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></p>
 </footer>
 
 </article>
