--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <li>Comes with "Print" and "Download as PDF" buttons</li>
 </ul>
 <p><strong><a href="http://vileworks.com/contract/demo.php">View demo, test signature functionality</a></strong>.</p>
-<hr>
-<p><strong><a href="http://vileworks.com/contract/generator/">Generate a new contract online</a></strong> or get the concatenated code from <a href="https://github.com/nonsalant/contract/blob/master/contract.php">contract.php</a> in the GitHub repo.</p>
+<p><a href="http://vileworks.com/contract/demo.php"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Print/PDF Contract"></a></p>
+<p><button><a href="http://vileworks.com/contract/generator/">Generate a new contract</a></button></p>
 <p>Upload the <strong>contract.php</strong> file to your server and send a link to your client. 
 (You can rename this file, for example if there are other contracts in the same folder.)</p>
 <p>Once they have signed, this PHP file will delete itself 
@@ -57,7 +57,6 @@ that can be printed or downloaded as a PDF.</p>
 
 <footer>
   <hr>
-  <p><a href="http://vileworks.com/contract/demo.php"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Print/PDF Contract"></a></p>
   <div class="promote">
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
