--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 <li>Can only be singed once</li>
 <li>Comes with "Print" and "Download as PDF" buttons</li>
 </ul>
-<p><strong><a href="http://vileworks.com/contract/demo.php">View demo, test signature functionality</a></strong>.</p>
+<p style="text-align:center"><a href="http://vileworks.com/contract/demo.php">View a demo</a>.</p>
 <p><a href="http://vileworks.com/contract/demo.php"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Print/PDF Contract"></a></p>
-<p><button><a href="http://vileworks.com/contract/generator/">Generate a new contract</a></button></p>
+<p><a class="button" href="http://vileworks.com/contract/generator/">Generate a new contract</a></p>
 <p>Upload the <strong>contract.php</strong> file to your server and send a link to your client. 
 (You can rename this file, for example if there are other contracts in the same folder.)</p>
 <p>Once they have signed, this PHP file will delete itself 
