--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
 <section>
 <ul>
-<li>Host it on your own domain</li>
-<li>Can only be singed once</li>
-<li>Comes with "Print" and "Download as PDF" buttons</li>
+  <li>Host it on your own domain</li>
+  <li>Can only be singed once</li>
+  <li>The document can be downloaded as a PDF (click on the picture below for demo)</li>
 </ul>
 <p style="text-align:center"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">View a demo</a>.</p>
 <p><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Signable contract"></a></p>
-<p><a class="button" href="http://vileworks.com/contract/generator/">Generate a new contract</a></p>
+<p><a class="button" href="http://vileworks.com/contract/generator/">Generate a new contract &rarr;</a></p>
 <p>Upload the <strong>contract.php</strong> file to your server and send a link to your client. 
 (You can rename this file, for example if there are other contracts in the same folder.)</p>
 <p>Once they have signed, this PHP file will delete itself 
