--- a/index.html
+++ b/index.html
@@ -44,25 +44,31 @@
   <li>Can only be singed once</li>
   <li>The document can be downloaded as a PDF (click on the picture below for demo)</li>
 </ul>
-<p style="text-align:center"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">View a demo</a>.</p>
-<p><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab"><img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Signable contract"></a></p>
-<p><a class="button" href="http://vileworks.com/contract/generator/">Generate a new contract &rarr;</a></p>
+
+<p><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
+  <img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Open demo in new tab">
+</a></p>
+
+<p>
+  <a class="button" href="http://vileworks.com/contract/generator/">Generate a new contract &rarr;</a>
+	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
+	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
+	<!-- Render StumbleUpon -->
+	<su:badge layout="3"></su:badge>
+</p>
+
+
+
 <p>Upload the <strong>contract.php</strong> file to your server and send a link to your client. 
 (You can rename this file, for example if there are other contracts in the same folder.)</p>
 <p>Once they have signed, this PHP file will delete itself 
 and leave behind an HTML version of the signed contract 
 that can be printed or downloaded as a PDF.</p>
 <p><a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p>
+
 </section>
 
 <footer>
-  <hr>
-  <div class="promote">
-  	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
-  	<iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
-  	<!-- Render StumbleUpon -->
-  	<su:badge layout="3"></su:badge>
-  </div>
   <hr>
   <p>Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></p>
 </footer>
