--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
   <li>The document can be downloaded as a PDF (click on the picture below for demo)</li>
 </ul>
 
+<p>
 <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
 <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
-<!-- Render StumbleUpon -->
-<su:badge layout="3"></su:badge>
+<!-- Render StumbleUpon --><su:badge layout="3"></su:badge>
+</p>
 
 <p><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
   <img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Open demo in new tab">
