--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>
 <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
 <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
-<!-- Render StumbleUpon --><su:badge layout="3"></su:badge>
+<!-- Render StumbleUpon --><su:badge layout="3" style="height: 24px;"></su:badge>
 </p>
 
 <p><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
@@ -56,6 +56,7 @@
 </a></p>
 
 <p>
+  <a href="http://vileworks.com/contract/demo.php">View demo, test signature functionality</a> 
   <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract &rarr;</a>
 </p>
 
