--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>
 <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
 <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
-<span style="height: 24px;><!-- Render StumbleUpon --><su:badge layout="3" style="height: 24px;"></su:badge></span>
+<span style="height: 24px;"><!-- Render StumbleUpon --><su:badge layout="3" style="height: 24px;"></su:badge></span>
 </p>
 
 <p><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
@@ -59,15 +59,6 @@
   <a href="http://vileworks.com/contract/demo.php">View demo, test signature functionality</a> 
   <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract &rarr;</a>
 </p>
-
-
-
-<p>Upload the <strong>contract.php</strong> file to your server and send a link to your client. 
-(You can rename this file, for example if there are other contracts in the same folder.)</p>
-<p>Once they have signed, this PHP file will delete itself 
-and leave behind an HTML version of the signed contract 
-that can be printed or downloaded as a PDF.</p>
-<p><a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p>
 
 </section>
 
