--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 <ul>
   <li>Host it on your own domain</li>
   <li>Can only be singed once</li>
-  <li>The document can be downloaded as a PDF (click on the picture below for demo)</li>
+  <li>The document can be downloaded as a PDF</li>
 </ul>
 <hr>
 
-<p>
+<p style="margin: 2em 0em 1em 0;">
   <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   <span id="stumble"><su:badge layout="3" style="height: 24px;"></su:badge></span>
@@ -57,7 +57,9 @@
 </a></p>
 
 <p>
-  <a href="http://vileworks.com/contract/demo.php">View demo, test signature functionality</a> 
+  <strong style="font-weight:700"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
+      View demo, test signature functionality
+  </a></strong> or
   <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract &rarr;</a>
 </p>
 
