--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Open demo in new tab">
 </a></p>
 
-<p>
+<p style="text-align:center;">
   <strong style="font-weight:700"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
       View demo, test signature functionality
   </a></strong> or
