--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <footer>
   <hr>
-  <p>Hosted on GitHub Pages &mdash; Created by <a href="https://twitter.com/nonsalant">Stefan Matei</a></p>
+  <p>Hosted on GitHub Pages</p>
 </footer>
 
 </article>
