--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
 </a></p>
 
 <p style="text-align:center;">
-  <strong style="font-weight:700"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
-      View demo, test signature functionality
-  </a></strong> or
+  <strong style="font-weight:700">
+    <a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
+      View demo &amp; test signature
+    </a>
+  </strong> or&#8199;
   <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract &rarr;</a>
 </p>
 
