--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
       View demo &amp; test signature
     </a>
-  </strong> or&#8199;
+  </strong>&#8199; or
   <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract &rarr;</a>
 </p>
 
