--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <header>
   <h1>
     <a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-    Signable Contract.php
+    Signable contract.php
   </h1>
   <h2>Generate an esignable contract that lives in a single .php file</h2>
 </header>
