--- a/index.html
+++ b/index.html
@@ -56,11 +56,16 @@
 </a></p>
 
 <p style="text-align:center;">
-  <strong style="font-weight:700">
-    <a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
+  <span style="
+        font-size: 1.15em;
+        line-height: 1rem;
+        border-bottom: solid 1px #ccc;
+        margin-right: 1em;
+    ">
+    <a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab" >
       View demo &amp; test signature
     </a>
-  </strong> or:
+  </span>
   <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract &rarr;</a>
 </p>
 
