--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </p>
 
 <p><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
-  <img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Open demo in new tab">
+  <img style=" max-width: calc(100% + 4em); margin: 0 -2em; "src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Open demo in new tab">
 </a></p>
 
 <p style="text-align:center;">
