--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       View demo &amp; test signature
     </a>
   </span>
-  <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract &rarr;</a>
+  <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract</a>
 </p>
 
 </section>
