--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <ul>
   <li>Host it on your own domain</li>
   <li>Can only be singed once</li>
-  <li>The document can be downloaded as a PDF</li>
+  <li>The resulting document can be downloaded as a PDF</li>
 </ul>
 
 <p style="margin: 2em 0em 1em 0;">
