--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Contract by nonsalant</title>
-
+    <title>Signable contract.php</title>
+    <link rel="shortcut icon" href="http://vileworks.com/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
