--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <span id="stumble"><su:badge layout="3" style="height: 24px;"></su:badge></span>
 </p>
 
-<p><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
-  <img style=" max-width: calc(100% + 4em); margin: 0 -2em; "src="https://dl.dropboxusercontent.com/u/19848482/vileworks/signed-contract.png" title="Open demo in new tab">
+<p style="text-align: center;"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
+  <img style=" max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="Open demo in new tab">
 </a></p>
 
 <p style="text-align:center;">
