--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
 <p style="margin: 2em 0em 1em 0;">
   <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
-  <span id="stumble"><su:badge layout="3" style="height: 24px;"></su:badge></span>
 </p>
+<div style=""float:right;">
+  <span class='st_twitter_large' displayText='Tweet'></span> 
+  <span class='st_linkedin_large' displayText='LinkedIn'></span> 
+  <span class='st_email_large' displayText='Email'></span> 
+  <span class='st_reddit_large' displayText='Reddit'></span>
+</div>
 
 <p style="text-align: center;"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
   <img style=" max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="Open demo in new tab">
@@ -89,14 +94,10 @@
   pageTracker._trackPageview();
   } catch(err) {}
 </script>
-<!--StumbleUpon Script -->
-<script type="text/javascript">
-  (function() {
-    var li = document.createElement('script'); li.type = 'text/javascript'; li.async = true;
-    li.src = ('https:' == document.location.protocol ? 'https:' : 'http:') + '//platform.stumbleupon.com/1/widgets.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(li, s);
-  })();
-</script>
+<!-- ShareThis Scripts -->
+<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: true, doNotCopy: false, hashAddressBar: false});</script>
 
 </body>
 </html>
