--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
 </p>
-<div style=""float:right;">
+<div style="float:right;">
   <span class='st_twitter_large' displayText='Tweet'></span> 
   <span class='st_linkedin_large' displayText='LinkedIn'></span> 
   <span class='st_email_large' displayText='Email'></span> 
